## automake.am
##
## Top level automake.am for Rivendell
##
## (C) Copyright 2002-2006 Fred Gleason <fredg@paravelsystems.com>
##
##      $Id: Makefile.am,v 1.16 2011/12/22 00:52:05 cvs Exp $
##      $Date: 2011/12/22 00:52:05 $
##
##   This program is free software; you can redistribute it and/or modify
##   it under the terms of the GNU General Public License version 2 as
##   published by the Free Software Foundation.
##
##   This program is distributed in the hope that it will be useful,
##   but WITHOUT ANY WARRANTY; without even the implied warranty of
##   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
##   GNU General Public License for more details.
##
##   You should have received a copy of the GNU General Public
##   License along with this program; if not, write to the Free Software
##   Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
##
##
## Use automake to process this into a Makefile.in


EXTRA_DIST = my.cnf-master\
             my.cnf-standby\
             rd-bin.conf.in\
             rd.conf-sample\
             rd.conf-slax\
             rd-sample.ini\
             rlm_ando.conf\
             rlm_facebook.conf\
             rlm_icecast2.conf\
             rlm_inno713.conf\
             rlm_liqcomp.conf\
             rlm_serial.conf\
             rlm_shoutcast1.conf\
             rlm_twitter.conf\
             rlm_udp.conf\
             rlm_xds.conf\
             rlm_xmpad.conf

CLEANFILES = *~
DISTCLEANFILES = rdfeed.conf
MAINTAINERCLEANFILES = *~ Makefile.in configure aclocal.m4
